Aggiunto metodo per cambiare la password per tutti gli User